vlib/v/checker/tests/option_fn_err.out
vlib/v/checker/tests/option_fn_err.vv:12:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   10 |
   11 | const (
   12 |     const_value = bar(0)
      |                   ~~~~~~
   13 | )
   14 |
vlib/v/checker/tests/option_fn_err.vv:18:15: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   16 |     f fn (int)
   17 | mut:
   18 |     value int  = bar(0)
      |                  ~~~~~~
   19 |     opt   ?int = bar(0)
   20 | }
vlib/v/checker/tests/option_fn_err.vv:32:2: error: foo() returns an option, so it should have either an `or {}` block, or `?` at the end
   30 | fn main() {
   31 |     // call fn
   32 |     foo()
      |     ~~~~~
   33 |     _ := bar(0)
   34 |     println(twice(bar(0)))
vlib/v/checker/tests/option_fn_err.vv:33:7: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   31 |     // call fn
   32 |     foo()
   33 |     _ := bar(0)
      |          ~~~~~~
   34 |     println(twice(bar(0)))
   35 |
vlib/v/checker/tests/option_fn_err.vv:34:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   32 |     foo()
   33 |     _ := bar(0)
   34 |     println(twice(bar(0)))
      |                   ~~~~~~
   35 |
   36 |     // anon fn
vlib/v/checker/tests/option_fn_err.vv:37:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   35 |
   36 |     // anon fn
   37 |     fn (_ int) {}(bar(0))
      |                   ~~~~~~
   38 |
   39 |     // assert
vlib/v/checker/tests/option_fn_err.vv:40:9: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   38 |
   39 |     // assert
   40 |     assert bar(true)
      |            ~~~~~~~~~
   41 |
   42 |     // struct
vlib/v/checker/tests/option_fn_err.vv:45:10: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   43 |     mut v := Data{
   44 |         f: fn (_ int) {}
   45 |         value: bar(0)
      |                ~~~~~~
   46 |         opt: bar(0)
   47 |     }
vlib/v/checker/tests/option_fn_err.vv:48:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   46 |         opt: bar(0)
   47 |     }
   48 |     v.add(bar(0)) // call method
      |           ~~~~~~
   49 |     v.f(bar(0)) // call fn field
   50 |
vlib/v/checker/tests/option_fn_err.vv:49:6: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   47 |     }
   48 |     v.add(bar(0)) // call method
   49 |     v.f(bar(0)) // call fn field
      |         ~~~~~~
   50 |
   51 |     // array
vlib/v/checker/tests/option_fn_err.vv:53:9: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   51 |     // array
   52 |     mut arr := [1, 2]
   53 |     arr << bar(0)
      |            ~~~~~~
   54 |     // init
   55 |     _ := [bar(0)]
vlib/v/checker/tests/option_fn_err.vv:55:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   53 |     arr << bar(0)
   54 |     // init
   55 |     _ := [bar(0)]
      |           ~~~~~~
   56 |     _ := []int{len: 1, init: bar(0)}
   57 |     _ := [bar(0)]!
vlib/v/checker/tests/option_fn_err.vv:56:27: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   54 |     // init
   55 |     _ := [bar(0)]
   56 |     _ := []int{len: 1, init: bar(0)}
      |                              ~~~~~~
   57 |     _ := [bar(0)]!
   58 |     _ := [1]int{init: bar(0)}
vlib/v/checker/tests/option_fn_err.vv:57:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   55 |     _ := [bar(0)]
   56 |     _ := []int{len: 1, init: bar(0)}
   57 |     _ := [bar(0)]!
      |           ~~~~~~
   58 |     _ := [1]int{init: bar(0)}
   59 |     // index
vlib/v/checker/tests/option_fn_err.vv:60:13: error: cannot use option or result as index (array type `[]int`)
   58 |     _ := [1]int{init: bar(0)}
   59 |     // index
   60 |     println(arr[bar(0)])
      |                ~~~~~~~~
   61 |     // array builtin methods
   62 |     arr.insert(0, bar(0))
vlib/v/checker/tests/option_fn_err.vv:62:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   60 |     println(arr[bar(0)])
   61 |     // array builtin methods
   62 |     arr.insert(0, bar(0))
      |                   ~~~~~~
   63 |     arr.prepend(bar(0))
   64 |     arr.contains(bar(0))
vlib/v/checker/tests/option_fn_err.vv:63:14: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   61 |     // array builtin methods
   62 |     arr.insert(0, bar(0))
   63 |     arr.prepend(bar(0))
      |                 ~~~~~~
   64 |     arr.contains(bar(0))
   65 |     arr.index(bar(0))
vlib/v/checker/tests/option_fn_err.vv:64:15: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   62 |     arr.insert(0, bar(0))
   63 |     arr.prepend(bar(0))
   64 |     arr.contains(bar(0))
      |                  ~~~~~~
   65 |     arr.index(bar(0))
   66 |     println(arr.map(bar(0)))
vlib/v/checker/tests/option_fn_err.vv:65:12: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   63 |     arr.prepend(bar(0))
   64 |     arr.contains(bar(0))
   65 |     arr.index(bar(0))
      |               ~~~~~~
   66 |     println(arr.map(bar(0)))
   67 |     println(arr.filter(bar(true)))
vlib/v/checker/tests/option_fn_err.vv:66:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   64 |     arr.contains(bar(0))
   65 |     arr.index(bar(0))
   66 |     println(arr.map(bar(0)))
      |                     ~~~~~~
   67 |     println(arr.filter(bar(true)))
   68 |     println(arr.any(bar(true)))
vlib/v/checker/tests/option_fn_err.vv:67:21: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   65 |     arr.index(bar(0))
   66 |     println(arr.map(bar(0)))
   67 |     println(arr.filter(bar(true)))
      |                        ~~~~~~~~~
   68 |     println(arr.any(bar(true)))
   69 |     println(arr.all(bar(true)))
vlib/v/checker/tests/option_fn_err.vv:68:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   66 |     println(arr.map(bar(0)))
   67 |     println(arr.filter(bar(true)))
   68 |     println(arr.any(bar(true)))
      |                     ~~~~~~~~~
   69 |     println(arr.all(bar(true)))
   70 |
vlib/v/checker/tests/option_fn_err.vv:69:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   67 |     println(arr.filter(bar(true)))
   68 |     println(arr.any(bar(true)))
   69 |     println(arr.all(bar(true)))
      |                     ~~~~~~~~~
   70 |
   71 |     match bar(0) {
vlib/v/checker/tests/option_fn_err.vv:71:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   69 |     println(arr.all(bar(true)))
   70 |
   71 |     match bar(0) {
      |           ~~~~~~
   72 |         0 {}
   73 |         else {}